--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
     <div class="sticky-box">Div for question5</div>
 
-
-
-
-
     <div class="background-image">Div for question6</div>
-    
+
+    <div class="background-image-repeat">Div for question7</div>
+
+    <div class="box1">Div for question8</div>
+    <div class="box2">Div for question8</div>
+
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos excepturi inventore illum sed. Alias perspiciatis eos reprehenderit a. Pariatur, ut? Qui nihil enim iusto tenetur adipisci ab, in amet facilis.
     Nam reiciendis molestiae voluptatum pariatur tempora in. Ratione sequi dolore pariatur distinctio optio aliquid libero corrupti asperiores tenetur eaque fugit ex quidem accusantium veniam sit, voluptatum perferendis facilis quis at!
     Sequi similique est cum molestias error? Mollitia distinctio totam iusto earum, explicabo eius in ducimus necessitatibus labore vel. Delectus rem nihil sequi fugiat esse maxime reiciendis natus odio magni optio.
