--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
     <div class="box1">Div for question8</div>
     <div class="box2">Div for question8</div>
 
-    <div id="container">
+    <div id="container1">
         <div id="boxA">Q9</div>
         <div id="boxB">Q9</div>
         <div id="boxC">Q9</div>
-        <div id="boxD">Q9</div>
-        <div id="boxE">Q9</div>
 
     </div>
+
+    <div id="container2">
+        <div id="boxD">Q9</div>
+        <div id="boxE">Q9</div>
+        <div id="boxF">Q9</div>
+
+    </div>
+
     
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos excepturi inventore illum sed. Alias perspiciatis eos reprehenderit a. Pariatur, ut? Qui nihil enim iusto tenetur adipisci ab, in amet facilis.
