--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
     </div>
 
     <div id="container6">
-        <div id="boxS">Q14</div>
-        <div id="boxT">Q14</div>
-        <div id="boxU">Q14</div>
-
+        <p>This is paragraph 1</p>
+        <p>This is paragraph 2</p>
+        <p>This is paragraph 3</p>
     </div>
     
 
