--- a/index.html
+++ b/index.html
@@ -67,6 +67,12 @@
         <p>This is paragraph 3</p>
     </div>
     
+    <div id="container7">
+        <div id="boxS">Q15</div>
+        <div id="boxT">Q15</div>
+        <div id="boxU">Q15</div>
+
+    </div>
 
     
 
